vlib/v/checker/tests/decompose_type_err.out
vlib/v/checker/tests/decompose_type_err.vv:6:13: error: decomposition can only be used on arrays
    4 | 
    5 | fn main() {
    6 |     varargs(...123)
      |                ~~~
    7 | }
vlib/v/checker/tests/decompose_type_err.vv:6:10: error: `ast.ArrayDecompose` (no value) used as value in argument 1 to `varargs`
    4 | 
    5 | fn main() {
    6 |     varargs(...123)
      |             ~~~~~~
    7 | }
